classe Pixel ajoutée et terminée

--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
 		<script src="js/pixel.class.js"></script>
 		<script src="js/app.js"></script>
         <script src="js/main.js"></script>
+
+        <script>
+        	// var p =  new  Pixel(5,2,50,'#f00');
+        </script>
     </body>
 </html>
